hancom/compiling_error.txt
/home/cookiebean/Desktop/C/hancom/union.cpp:8:14: error: ‘NODE ceil’ redeclared as different kind of symbol
 NODE bottom, ceil;
              ^~~~
In file included from /usr/include/features.h:424:0,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/os_defines.h:39,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/c++config.h:533,
                 from /usr/include/c++/7/cassert:43,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/stdc++.h:33,
                 from /home/cookiebean/Desktop/C/hancom/union.cpp:1:
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:159:1: note: previous declaration ‘double ceil(double)’
 __MATHCALLX (ceil,, (_Mdouble_ __x), (__const__));
 ^
/home/cookiebean/Desktop/C/hancom/union.cpp: In function ‘void next()’:
/home/cookiebean/Desktop/C/hancom/union.cpp:24:21: error: address of overloaded function with no contextual type information
   if(top -> next != &ceil) top = top -> next;
                     ^~~~~
